--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -342,7 +342,8 @@
                                                 <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessor ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
                                                 <tds-button class="button-header-grid float-right"
                                                             [tooltip]="'Add Predecessor'"
-                                                            [action]="ButtonActions.GenericAdd"
+                                                            [action]="ButtonActions.Add"
+                                                            [id]="'btnAddPredecessor'"
                                                             (click)="onAddTaskDependency(model.predecessorList, dataGridTaskPredecessorsHelper)">
                                                 </tds-button>
                                             </ng-template>
@@ -390,7 +391,8 @@
                                                 <label class="pad-top-2 pad-left-10 mar-bottom-0">Successors ({{dataGridTaskSuccessorsHelper.gridData.data.length}})</label>
                                                 <tds-button class="button-header-grid float-right"
                                                             [tooltip]="'Add Successor'"
-                                                            [action]="ButtonActions.GenericAdd"
+                                                            [action]="ButtonActions.Add"
+                                                            [id]="'btnAddSuccessor'"
                                                             (click)="onAddTaskDependency(model.successorList, dataGridTaskSuccessorsHelper)">
                                                 </tds-button>
                                             </ng-template>
