TM-13540 - Formatting change to meet E2E specs and best practice.

--- a/web-app/tds/web-app/css/shared/components/datetime-control.component.sass
+++ b/web-app/tds/web-app/css/shared/components/datetime-control.component.sass
@@ -1,14 +1,14 @@
 tds-datetime-control
-  table
+  .tds-datetime-control-component
     border-collapse: collapse !important
     border-width: 1px
     border-style: solid
     border-color: #ededed
     background-color: #ededed
-  td
-    padding: 0 !important
+    width: 184px
   kendo-datepicker
     width: 155px !important
+    float: left
     .k-picker-wrap
       border: 0 !important
   kendo-timepicker
