--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -453,15 +453,18 @@
                 </form>
             </div>
             <div class="modal-footer form-group-center">
-                <button class="btn btn-primary pull-left"
-                        [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onCreate()" type="button">
-                    <i  class="fa fa-fw fa-floppy-o"></i>
-                    <span>Save</span>
-                </button>
-                <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
-                    <i class="glyphicon glyphicon-ban-circle action-button"></i>
-                    <span>Cancel</span>
-                </button>
+                <tds-button
+		                [action]="ButtonActions.Save"
+                        class="btn-primary pull-left"
+                        [disabled]="isFormInvalid() || !hasEditTaskPermission"
+                        (click)="onCreate()">
+                </tds-button>
+
+                <tds-button
+                        [action]="ButtonActions.Cancel"
+                        class="component-action-cancel pull-right"
+                        (click)="cancelCloseDialog()">
+                </tds-button>
             </div>
         </div>
     </div>
