--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -498,19 +498,26 @@
                 </form>
             </div>
             <div class="modal-footer form-group-center">
-	            <button class="btn btn-primary pull-left"
-                        [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onSave()" type="button">
-		            <i  class="fa fa-fw fa-floppy-o"></i>
-		            <span>Update</span>
-	            </button>
-                <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
-                    <i class="glyphicon glyphicon-ban-circle action-button"></i>
-                    <span>Cancel</span>
-                </button>
-                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasDeleteTaskPermission">
-                    <i  class="glyphicon glyphicon-trash action-button"></i>
-                    <span>Delete</span>
-                </button>
+                <tds-button
+                        [action]="ButtonActions.Save"
+                        class="btn-primary pull-left"
+                        title="Update"
+                        [disabled]="isFormInvalid() || !hasEditTaskPermission"
+                        (click)="onSave()">
+                </tds-button>
+
+                <tds-button
+                        [action]="ButtonActions.Delete"
+                        class="btn-danger component-action-delete"
+                        [disabled]="!hasDeleteTaskPermission"
+                        (click)="deleteTask()">
+                </tds-button>
+
+                <tds-button
+                        [action]="ButtonActions.Cancel"
+                        class="component-action-cancel pull-right"
+                        (click)="cancelCloseDialog()">
+                </tds-button>
             </div>
         </div>
     </div>
