TM-12823 Fix issue alignment favorites icon

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
@@ -75,7 +75,7 @@
 											</div>
 										</td>
 
-										<td class="asset-explorer-td-favorite text-center tds-action-button-set">
+										<td class="text-center tds-action-button-set">
 											<tds-button [action]="ButtonActions.Custom"
 											            [icon]="report.isFavorite ? 'star' : 'star-o' "
 											            [title]="report.isFavorite ? 'Remove from Favorites' : 'Add to Favorites'"
