--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -340,12 +340,11 @@
                                             <!-- Toolbar Template -->
                                             <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                 <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessor ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
-                                                <tds-button class="button-header-grid float-right"
+                                                <tds-button-add class="button-header-grid float-right"
                                                             [tooltip]="'Add Predecessor'"
-                                                            [action]="ButtonActions.Add"
                                                             [id]="'btnAddPredecessor'"
                                                             (click)="onAddTaskDependency(model.predecessorList, dataGridTaskPredecessorsHelper)">
-                                                </tds-button>
+                                                </tds-button-add>
                                             </ng-template>
                                             <!-- Columns -->
                                             <kendo-grid-column *ngFor="let column of predecessorSuccessorColumns"
@@ -389,12 +388,11 @@
                                             <!-- Toolbar Template -->
                                             <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                 <label class="pad-top-2 pad-left-10 mar-bottom-0">Successors ({{dataGridTaskSuccessorsHelper.gridData.data.length}})</label>
-                                                <tds-button class="button-header-grid float-right"
+                                                <tds-button-add class="button-header-grid float-right"
                                                             [tooltip]="'Add Successor'"
-                                                            [action]="ButtonActions.Add"
                                                             [id]="'btnAddSuccessor'"
                                                             (click)="onAddTaskDependency(model.successorList, dataGridTaskSuccessorsHelper)">
-                                                </tds-button>
+                                                </tds-button-add>
                                             </ng-template>
                                             <!-- Columns -->
                                             <kendo-grid-column *ngFor="let column of predecessorSuccessorColumns"
@@ -453,18 +451,16 @@
                 </form>
             </div>
             <div class="modal-footer form-group-center">
-                <tds-button
-		                [action]="ButtonActions.Save"
+                <tds-button-save
                         class="btn-primary pull-left"
                         [disabled]="isFormInvalid() || !hasEditTaskPermission"
                         (click)="onCreate()">
-                </tds-button>
+                </tds-button-save>
 
-                <tds-button
-                        [action]="ButtonActions.Cancel"
+                <tds-button-cancel
                         class="component-action-cancel pull-right"
                         (click)="cancelCloseDialog()">
-                </tds-button>
+                </tds-button-cancel>
             </div>
         </div>
     </div>
