--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -67,21 +67,21 @@
 			</div>
 			<div class="col-sm-6 filters-section">
 				<div>
-					<tds-button [action]="ButtonActions.Custom"
+					<tds-button-custom
 							class="component-action-clear-filters"
 					        id="btnClean"
 					        icon="times"
 					        title="Clear filters"
 					        [disabled]="!hasFilterApplied()"
 					        (click)="onClearFilters()">
-					</tds-button>
+					</tds-button-custom>
 				</div>
-				<tds-button [action]="ButtonActions.Custom"
+				<tds-button-custom
 				            icon="refresh"
 				            title="Refresh"
 				            isIconButton="true"
 				            class="component-action-reload pull-righ"
-				            (click)="onReload()"></tds-button>
+				            (click)="onReload()"></tds-button-custom>
 			</div>
 		</ng-template>
 
@@ -119,12 +119,12 @@
 			             let-isComment="dataItem.taskAndCommentFlags.comment"
 			             let-isIssue="dataItem.taskAndCommentFlags.issue">
 				<div class="tds-action-button-set">
-					<tds-button [action]="ButtonActions.Edit" (click)="showAssetEditView(dataItem, rowIndex)" tooltip="Edit Asset"></tds-button>
-					<tds-button [action]="ButtonActions.Custom" tooltip="Create Task" icon="file-text-o" *ngIf="!isIssue" (click)="createTask(dataItem, rowIndex)"></tds-button>
-					<tds-button [action]="ButtonActions.Custom" tooltip="List Tasks" icon="list-alt" *ngIf="isIssue" (click)="showTask(dataItem, rowIndex)"></tds-button>
-					<tds-button [action]="ButtonActions.Custom" tooltip="Create Comment" icon="comment-o" *ngIf="!isComment" (click)="createComment(dataItem, rowIndex)"></tds-button>
-					<tds-button [action]="ButtonActions.Custom" tooltip="Show Comments" icon="comments-o" *ngIf="isComment" (click)="showComment(dataItem, rowIndex)"></tds-button>
-					<tds-button [action]="ButtonActions.Clone" (click)="showAssetCloneView(dataItem, rowIndex)"></tds-button>
+					<tds-button-edit  (click)="showAssetEditView(dataItem, rowIndex)" tooltip="Edit Asset"></tds-button-edit>
+					<tds-button-custom tooltip="Create Task" icon="file-text-o" *ngIf="!isIssue" (click)="createTask(dataItem, rowIndex)"></tds-button-custom>
+					<tds-button-custom tooltip="List Tasks" icon="list-alt" *ngIf="isIssue" (click)="showTask(dataItem, rowIndex)"></tds-button-custom>
+					<tds-button-custom tooltip="Create Comment" icon="comment-o" *ngIf="!isComment" (click)="createComment(dataItem, rowIndex)"></tds-button-custom>
+					<tds-button-custom tooltip="Show Comments" icon="comments-o" *ngIf="isComment" (click)="showComment(dataItem, rowIndex)"></tds-button-custom>
+					<tds-button-clone  (click)="showAssetCloneView(dataItem, rowIndex)"></tds-button-clone>
 				</div>
 			</ng-template>
 		</kendo-grid-command-column>
